--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --portfolio-bg: #292929;
+  --active-font-color: #40cdb5;
+  --primary-font-color: #ffffff;
+  --banner-bg: #434343;
+  --cursor-shadow-color: rgba(48, 112, 102, 1);
+}
+
+@font-face {
+  font-family: "Fira Code";
+  src: url("/fonts/FiraCode-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Karla";
+  src: url("/fonts/Karla-Regular.ttf") format("truetype");
+}
+
+body {
+  font-family: "Fira Code", "Karla", sans-serif;
+}
