--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,12 +14,12 @@
 
 @font-face {
   font-family: "Fira Code";
-  src: url("/fonts/FiraCode-Regular.ttf") format("truetype");
+  src: url("../public/assets/fonts/FiraCode-VariableFont_wght.ttf");
 }
 
 @font-face {
   font-family: "Karla";
-  src: url("/fonts/Karla-Regular.ttf") format("truetype");
+  src: url("../public/assets/fonts/Karla-Italic-VariableFont_wght.ttf");
 }
 
 body {
