--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,8 +32,25 @@ a {
   text-decoration: none;
   color: var(--primary-font-color);
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
 
   &:hover {
     color: var(--active-font-color);
+  }
+}
+
+.primary-btn {
+  border: 1px solid rgba(255, 255, 255, 1);
+  background: none;
+  height: 48px;
+  padding: 0 24px 0 24px;
+  color: var(--primary-font-color);
+  border-radius: 100px;
+  gap: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    border-color: var(--active-font-color);
   }
 }
