--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -4,6 +4,41 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
   height: 100vh;
   width: 100%;
+}
+
+.hero-container-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 156px;
+  gap: 12px;
+  font-family: "Karla";
+  color: rgba(217, 217, 2127, 1);
+
+  > h2 {
+    font-size: 40px;
+    font-weight: 400;
+  }
+
+  > h1 {
+    font-size: 128px;
+    font-weight: 700;
+    letter-spacing: -2%;
+  }
+}
+
+.title-button-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 48px;
+  color: rgba(255, 255, 255, 1);
 }
