changed language-switch from image to background-img to make transistions work

--- a/src/app/hero/header/header.component.html
+++ b/src/app/hero/header/header.component.html
@@ -1,7 +1,5 @@
 <div class="header-button-container">
-	<div class="header-button">
-		<img src="assets/icons/default_language_switch.png" alt="">
-	</div>
+	<div class="header-button" id="language-switch"></div>
 	<div class="header-button">
 		<a href="*">About me</a>
 	</div>
@@ -11,8 +9,8 @@
 	<div class="header-button">
 		<a href="*">Projects</a>
 	</div>
-
 </div>
+
 <div class="header-logo-container">
 	<div class="header-logo">
 		<img src="favicon_dark_theme.png" alt="Logo">
