--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,13 +1,18 @@
 <body>
 	<app-header />
-	<div class="hero-container-left"></div>
-	<div class="hero-container-center">
-		<h2>Frontend Developer</h2>
-		<h1>Dennis Jakobi</h1>
-		<div class="title-button-container">
-			<button class="primary-btn">Check my work</button>
-			<button class="primary-btn">Contact me</button>
+	<main>
+		<div class="hero-container-left flex-col-center">
+			<div class="hero-container-left-button"></div>
+			<div class="hero-container-seperator"></div>
 		</div>
-	</div>
-	<div class="hero-container-right"></div>
+		<div class="hero-container-center">
+			<h2>Frontend Developer</h2>
+			<h1>Dennis Jakobi</h1>
+			<div class="title-button-container">
+				<button class="primary-btn">Check my work</button>
+				<button class="primary-btn">Contact me</button>
+			</div>
+		</div>
+		<div class="hero-container-right flex-col-center"></div>
+	</main>
 </body>
