--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -3,13 +3,14 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-
   height: 100vh;
   width: 100%;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .hero-container-center {
@@ -41,4 +42,27 @@ body {
   align-items: center;
   gap: 48px;
   color: rgba(255, 255, 255, 1);
+}
+
+.hero-container-left-button {
+  background-image: url("../../../public/assets/img/scroll_btn_default.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 30px;
+  height: 48px;
+  margin-top: 420px;
+
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    cursor: pointer;
+    background-image: url("../../../public/assets/img/scroll_btn_hover.png");
+  }
+}
+
+.hero-container-seperator {
+  width: 2px;
+  height: 320px;
+  background-color: var(--active-font-color);
+  margin-top: 24px;
 }
