added social-media-links and email-link and seperator to right side of hero-section

--- a/src/app/hero/header/header.component.scss
+++ b/src/app/hero/header/header.component.scss
@@ -1,8 +1,7 @@
 :host {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  //   padding-top: 49px;
+  align-items: flex-end;
   height: 98px;
   padding-left: 96px;
   padding-right: 96px;
