--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,7 +1,7 @@
 <body>
 	<app-header />
 	<main>
-		<div class="hero-container-left flex-col-center">
+		<div class="hero-container-left flex-col-j-fe">
 			<div class="hero-container-left-button"></div>
 			<div class="hero-container-seperator"></div>
 		</div>
@@ -13,6 +13,14 @@
 				<button class="primary-btn">Contact me</button>
 			</div>
 		</div>
-		<div class="hero-container-right flex-col-center"></div>
+		<div class="hero-container-right flex-col-j-fe">
+			<div class="hero-container-email-right"><a
+					href="mailto:dennis.jakobi76@gmail.com">dennis.jakobi76&#64;gmail.com</a></div>
+			<div class="hero-container-social-media-link" id="hero-github-link"><a
+					href="https://github.com/DennisJakobi76" target="_blank"></a></div>
+			<div class="hero-container-social-media-link" id="hero-linkedin-link"><a
+					href="https://www.linkedin.com/in/dennis-jakobi-84372818b" target="_blank"></a></div>
+			<div class="hero-container-seperator" id="hero-seperator-right"></div>
+		</div>
 	</main>
 </body>
