--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -3,14 +3,16 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 100vh;
-  width: 100%;
+  // height: 100vh;
+  // width: 100vw;
 }
 
 main {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  height: calc(100vh - 98px);
 }
 
 .hero-container-center {
@@ -61,8 +63,64 @@ main {
 }
 
 .hero-container-seperator {
+  position: relative;
+  bottom: 0;
+  left: 50%;
   width: 2px;
-  height: 320px;
+  height: 310px;
   background-color: var(--active-font-color);
   margin-top: 24px;
+}
+
+.hero-container-email-right {
+  transform: rotate(-90deg);
+  margin-bottom: 24px;
+  margin-top: 248px;
+}
+
+#hero-github-link {
+  background-image: url("../../../public/assets/icons/github_icon_default.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 32px;
+  height: 32px;
+  transition: all 0.3s ease-in-out;
+
+  margin-bottom: 12px;
+
+  &:hover {
+    cursor: pointer;
+    background-image: url("../../../public/assets/icons/github_icon_hover.png");
+  }
+}
+
+#hero-linkedin-link {
+  background-image: url("../../../public/assets/icons/linkedin_icon_default.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 32px;
+  height: 32px;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    cursor: pointer;
+    background-image: url("../../../public/assets/icons/linkedin_icon_hover.png");
+  }
+}
+
+#hero-seperator-right {
+  background-color: rgba(217, 217, 2127, 1);
+  height: 220px;
+}
+
+.hero-container-right {
+  width: 30px;
+}
+
+.hero-container-social-media-link {
+  > a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 }
