added fading hover-points to social-media-links

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -16,10 +16,18 @@
 		<div class="hero-container-right flex-col-j-fe">
 			<div class="hero-container-email-right"><a
 					href="mailto:dennis.jakobi76@gmail.com">dennis.jakobi76&#64;gmail.com</a></div>
-			<div class="hero-container-social-media-link" id="hero-github-link"><a
-					href="https://github.com/DennisJakobi76" target="_blank"></a></div>
-			<div class="hero-container-social-media-link" id="hero-linkedin-link"><a
-					href="https://www.linkedin.com/in/dennis-jakobi-84372818b" target="_blank"></a></div>
+			<div class="hero-link-checkpoint-wrapper">
+				<div class="hero-container-social-media-link" id="hero-github-link"><a
+						href="https://github.com/DennisJakobi76" target="_blank"></a></div>
+				<div class="link-check-point" id="github-point-container"><img
+						src="assets/icons/link_check_radio_button.png" alt="Point" id="github-point"></div>
+			</div>
+			<div class="hero-link-checkpoint-wrapper">
+				<div class="hero-container-social-media-link" id="hero-linkedin-link"><a
+						href="https://www.linkedin.com/in/dennis-jakobi-84372818b" target="_blank"></a></div>
+				<div class="link-check-point" id="linkedin-point-container"><img
+						src="assets/icons/link_check_radio_button.png" alt="Point"></div>
+			</div>
 			<div class="hero-container-seperator" id="hero-seperator-right"></div>
 		</div>
 	</main>
