added animation to buttons text in hero-center

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -9,8 +9,8 @@
 			<h2>Frontend Developer</h2>
 			<h1>Dennis Jakobi</h1>
 			<div class="title-button-container">
-				<button class="primary-btn">Check my work</button>
-				<button class="primary-btn">Contact me</button>
+				<button class="primary-btn"><span>Check my work</span></button>
+				<button class="primary-btn"><span>Contact me</span></button>
 			</div>
 		</div>
 		<div class="hero-container-right flex-col-j-fe">
