--- a/src/app/hero/header/header.component.html
+++ b/src/app/hero/header/header.component.html
@@ -1,13 +1,29 @@
 <div class="header-button-container">
 	<div class="header-button" id="language-switch"></div>
-	<div class="header-button">
-		<a href="*">About me</a>
+	<div class="link-point-wrapper">
+		<div class="header-button">
+			<a href="*">About me</a>
+		</div>
+		<div id="header-about-me-point-container" class="header-point-container">
+			<img src="assets/icons/link_check_radio_button.png" alt="Point">
+		</div>
 	</div>
-	<div class="header-button">
-		<a href="*">Skills</a>
+
+	<div class="link-point-wrapper">
+		<div class="header-button">
+			<a href="*">Skills</a>
+		</div>
+		<div id="header-skills-point-container" class="header-point-container">
+			<img src="assets/icons/link_check_radio_button.png" alt="Point">
+		</div>
 	</div>
-	<div class="header-button">
-		<a href="*">Projects</a>
+	<div class="link-point-wrapper">
+		<div class="header-button">
+			<a href="*">Projects</a>
+		</div>
+		<div id="header-projects-point-container" class="header-point-container">
+			<img src="assets/icons/link_check_radio_button.png" alt="Point">
+		</div>
 	</div>
 </div>
 
