added a marquee to hero-component

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -30,5 +30,9 @@
 			</div>
 			<div class="hero-container-seperator" id="hero-seperator-right"></div>
 		</div>
+		<marquee class="hero-marquee" direction="left" behavior="scroll" scrollamount="2">
+			<span>* Frontend Developer * Employed And Happy * Based In Northrine Westfalia * Open To Interesting
+				Contacts *</span>
+		</marquee>
 	</main>
 </body>
