--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,7 @@ body {
   font-family: "Fira Code", "Karla", sans-serif;
   color: var(--primary-font-color);
   background-color: var(--portfolio-bg);
+  overflow: hidden;
 }
 
 a {
