--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -178,3 +178,22 @@ main {
 .title-button-container button:hover span {
   transform: translateX(-140%);
 }
+
+.hero-marquee {
+  position: absolute;
+  bottom: 42px;
+  height: 62px;
+  width: 110%;
+  background-color: rgba(255, 255, 255, 0.12);
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 32px;
+  padding-right: 32px;
+  // gap: 56px;
+  transform: rotate(-4deg);
+  z-index: 1;
+  text-align: center;
+  backdrop-filter: blur(5.3px);
+  font-size: 32px;
+  color: var(--active-font-color);
+}
