--- a/src/app/hero/header/header.component.scss
+++ b/src/app/hero/header/header.component.scss
@@ -34,7 +34,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 3px;
   }
 }
 
@@ -43,6 +42,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 3px;
 }
 
 .link-point-wrapper:hover a {
