changed html-marquee to div with marquee functionality since marquee is not recommended anymore

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -30,9 +30,13 @@
 			</div>
 			<div class="hero-container-seperator" id="hero-seperator-right"></div>
 		</div>
-		<marquee class="hero-marquee" direction="left" behavior="scroll" scrollamount="2">
-			<span>* Frontend Developer * Employed And Happy * Based In Northrine Westfalia * Open To Interesting
+		<div class="hero-marquee">
+
+			<span>* Frontend Developer * Employed And Happy * Based In North Rhine-Westphalia * Open To Interesting
 				Contacts *</span>
-		</marquee>
+
+
+
+		</div>
 	</main>
 </body>
