--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -189,11 +189,30 @@ main {
   padding-bottom: 12px;
   padding-left: 32px;
   padding-right: 32px;
-  // gap: 56px;
+  overflow: hidden;
+
   transform: rotate(-4deg);
   z-index: 1;
   text-align: center;
   backdrop-filter: blur(5.3px);
   font-size: 32px;
   color: var(--active-font-color);
+  white-space: nowrap;
+  box-sizing: border-box;
+
+  > span {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 54s linear infinite;
+    white-space: nowrap;
+  }
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
 }
