added marquee-component to clean up hero-component

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -30,13 +30,6 @@
 			</div>
 			<div class="hero-container-seperator" id="hero-seperator-right"></div>
 		</div>
-		<div class="hero-marquee">
-
-			<span>* Frontend Developer * Employed And Happy * Based In North Rhine-Westphalia * Open To Interesting
-				Contacts *</span>
-
-
-
-		</div>
+		<app-marquee />
 	</main>
 </body>
