--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,7 @@ body {
   color: var(--primary-font-color);
   background-color: var(--portfolio-bg);
   overflow: hidden;
+  cursor: default;
 }
 
 a {
