--- a/src/app/hero/marquee/marquee.component.scss
+++ b/src/app/hero/marquee/marquee.component.scss
@@ -1,7 +1,7 @@
 .hero-marquee {
   position: absolute;
-  bottom: 42px;
-  left: 0;
+  bottom: 72px;
+  left: -10px;
   height: 62px;
   width: 110%;
   background-color: rgba(255, 255, 255, 0.12);
