--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,3 +2,5 @@
 	<img src="assets/img/main_photo_hover_bg.png" alt="Striped Box Background">
 	<img src="assets/img/main_photo.jpg" alt="Photo" id="about-me-photo">
 </div>
+
+<app-info-card />
