--- a/src/app/cards/info-card/info-card.component.html
+++ b/src/app/cards/info-card/info-card.component.html
@@ -1,1 +1,7 @@
-<p>info-card works!</p>
+<div class="info-card-container">
+	<h3>Info-card-Title</h3>
+	<div class="info-card-body">
+		<h1>Info-card-content-headline</h1>
+		<ng-content></ng-content>
+	</div>
+</div>
