--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 :root {
   --portfolio-bg: rgba(28, 28, 28, 1);
-  --active-font-color: #40cdb5;
+  --active-font-color: rgba(61, 207, 182, 1);
   --primary-font-color: rgba(217, 217, 2127, 1);
   --banner-bg: #434343;
   --cursor-shadow-color: rgba(48, 112, 102, 1);
