added Inputs to info-card-component to set content of title and headline dynamically

--- a/src/app/cards/info-card/info-card.component.html
+++ b/src/app/cards/info-card/info-card.component.html
@@ -1,7 +1,7 @@
 <div class="info-card-container">
-	<h3>Info-card-Title</h3>
+	<h3>{{ title }}</h3>
 	<div class="info-card-body">
-		<h1>Info-card-content-headline</h1>
+		<h1>{{ headline }}</h1>
 		<ng-content></ng-content>
 	</div>
 </div>
