--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,7 +3,7 @@
 	<img src="assets/img/main_photo.jpg" alt="Photo" id="about-me-photo">
 </div>
 
-<app-info-card class="about-me-info-card">
+<app-info-card class="about-me-info-card" title="Who I Am" headline="About me">
 	Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam suscipit commodi fugiat hic accusamus non quia quae
 	in, labore facilis molestiae aperiam. Saepe minima quod asperiores ratione accusantium recusandae ut?
 	Voluptatibus, consectetur blanditiis soluta sunt quidem qui repellat quibusdam laboriosam ad doloremque dolores
