--- a/src/app/cards/info-card/info-card.component.scss
+++ b/src/app/cards/info-card/info-card.component.scss
@@ -37,5 +37,8 @@ h3 {
     line-height: 100%;
     letter-spacing: -3%;
     color: var(--active-font-color);
+    width: 100%;
+    text-align: left;
+    margin-bottom: 24px;
   }
 }
