added about-me-text to info-card in about-me-component

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,7 +4,9 @@
 </div>
 
 <app-info-card class="about-me-info-card" title="Who I Am" headline="About me">
-	Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam suscipit commodi fugiat hic accusamus non quia quae
-	in, labore facilis molestiae aperiam. Saepe minima quod asperiores ratione accusantium recusandae ut?
-	Voluptatibus, consectetur blanditiis soluta sunt quidem qui repellat quibusdam laboriosam ad doloremque dolores
+	Hi, I'm Dennis – a code enthusiast with a passion for modern web technologies and well-designed software. I've been
+	developing since 2014, rooted in backend (.NET/C#) and increasingly drawn to the frontend.
+	<br>
+	What drives me is the joy of coding: creating things, solving problems creatively, and constantly learning – that’s
+	what this job means to me.
 </app-info-card>
