added icons and paragraphs with style to about-me-card

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -9,4 +9,29 @@
 	<br>
 	What drives me is the joy of coding: creating things, solving problems creatively, and constantly learning – that’s
 	what this job means to me.
+	<div class="about-me-content-container">
+		<div class="about-me-content-img-and-text-container">
+			<div class="about-me-img-container">
+				<img id="location-icon" class="about-me-content-icon" src="assets/icons/location_icon.png"
+					alt="Location Icon">
+			</div>
+
+			<p>bla bla bla</p>
+		</div>
+		<div class="about-me-content-img-and-text-container">
+			<div class="about-me-img-container">
+				<img class="about-me-content-icon" src="assets/icons/cognition_icon.png" alt="Coginition Icon">
+
+			</div>
+			<p>bla bla bla</p>
+		</div>
+		<div class="about-me-content-img-and-text-container">
+			<div class="about-me-img-container">
+				<img id="new-releases-icon" class="about-me-content-icon" src="assets/icons/new_releases_icon.png"
+					alt="New Releases Icon">
+			</div>
+
+			<p>bla bla bla</p>
+		</div>
+	</div>
 </app-info-card>
