filled the info-card with missing information and finished the about-me-section

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -5,8 +5,7 @@
 
 <app-info-card class="about-me-info-card" title="Who I Am" headline="About me">
 	Hi, I'm Dennis – a code enthusiast with a passion for modern web technologies and well-designed software. I've been
-	developing since 2014, rooted in backend (.NET/C#) and increasingly drawn to the frontend.
-	<br>
+	developing since 2016, rooted in backend (.NET/C#) and increasingly drawn to the frontend.
 	What drives me is the joy of coding: creating things, solving problems creatively, and constantly learning – that’s
 	what this job means to me.
 	<div class="about-me-content-container">
@@ -16,14 +15,15 @@
 					alt="Location Icon">
 			</div>
 
-			<p>bla bla bla</p>
+			<p>Based in North Rhine-Westphalia. Loving the opportunity to work remotely all over the world. </p>
 		</div>
 		<div class="about-me-content-img-and-text-container">
 			<div class="about-me-img-container">
 				<img class="about-me-content-icon" src="assets/icons/cognition_icon.png" alt="Coginition Icon">
 
 			</div>
-			<p>bla bla bla</p>
+			<p>The tech world is constantly evolving – and that’s exactly what fascinates me. New tools and concepts
+				motivate me to stay curious and continuously improve my skills.</p>
 		</div>
 		<div class="about-me-content-img-and-text-container">
 			<div class="about-me-img-container">
@@ -31,7 +31,9 @@
 					alt="New Releases Icon">
 			</div>
 
-			<p>bla bla bla</p>
+			<p>I tackle challenges with a structured mindset and a focus on what truly matters. Analytical thinking,
+				curiosity, and the drive to find the best possible solution – often as part of a team – guide me along
+				the way.</p>
 		</div>
 	</div>
 </app-info-card>
