--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,1 +1,7 @@
-<p>technologies works!</p>
+<div class="technologies-container">
+	<div class="technologies-content-container">
+		<app-info-card title="Technologies" headline="Skill Set">
+		</app-info-card>
+		<div class="tech-skill-icon-container"></div>
+	</div>
+</div>
