added content to Skill-Set-Box

--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,6 +1,21 @@
 <div class="technologies-container">
 	<div class="technologies-content-container">
 		<app-info-card title="Technologies" headline="Skill Set">
+			<p>I’m passionate about working with modern front-end technologies such as HTML, CSS, JavaScript,
+				TypeScript,
+				Angular, and SCSS. I also bring experience in backend development, especially with C#, .NET, and
+				databases
+				using SQL. For me, keeping up with the latest developments isn’t just important – I genuinely enjoy
+				exploring new technologies and continuously growing my skill set. I see the rapid changes in web
+				development
+				as an exciting opportunity to keep learning and evolving.</p>
+			<h2 id="another-skill">You need <span id="another-skill-span">another skill?</span></h2>
+			<p>Feel free to contact me. I look forward to<br> expanding on my previous knowledge.</p>
+			<div class="another-skill-button-container">
+				<button class="primary-btn"><span>Let`s Talk</span></button>
+			</div>
+
+
 		</app-info-card>
 		<div class="tech-skill-icon-container">
 			<ng-container *ngFor="let skillIcon of skillIcons; let i = index">
