--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -75,3 +75,51 @@
   opacity: 0;
   pointer-events: none;
 }
+
+.another-skill-button-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+}
+
+button {
+  overflow: hidden;
+}
+
+button span {
+  display: inline-block;
+  transition: all 0.8s ease-in-out;
+}
+
+button:hover span {
+  transform: translateX(-140%);
+}
+
+#another-skill {
+  width: 100%;
+  text-align: left;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  color: white;
+
+  font-family: "Fira Code";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 120%;
+  letter-spacing: 0%;
+
+  > span {
+    color: var(--active-font-color);
+  }
+}
+
+p {
+  font-family: "Karla";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  letter-spacing: 0%;
+  width: 100%;
+}
