--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -85,7 +85,14 @@
 }
 
 button {
+  width: 122px;
+  height: 48px;
   overflow: hidden;
+  font-family: "Karla";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: 0%;
 }
 
 button span {
