linked projects in header-component to portfolio-component

--- a/src/app/hero/header/header.component.html
+++ b/src/app/hero/header/header.component.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="link-point-wrapper">
 		<div class="header-button">
-			<a href="*">Projects</a>
+			<a href="#featured-projects">Projects</a>
 		</div>
 		<div id="header-projects-point-container" class="header-point-container">
 			<img src="assets/icons/link_check_radio_button.png" alt="Point">
