--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -7,4 +7,43 @@
 .portfolio-header {
   transform: translateY(460px);
   width: 1440px;
+
+  > h2 {
+    width: 98px;
+    height: 28px;
+
+    font-family: "Karla";
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    color: var(--active-font-color);
+    margin-bottom: 20px;
+  }
+
+  > h1 {
+    width: 100%;
+    height: 64px;
+
+    font-family: "Fira Code";
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 100%;
+    letter-spacing: -3%;
+    color: var(--active-font-color);
+    margin-bottom: 41px;
+  }
+
+  > p {
+    width: 456px;
+    height: 44px;
+
+    font-family: "Karla";
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 120%;
+    letter-spacing: 0%;
+    color: var(--primary-font-color);
+    text-align: justify;
+  }
 }
