--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -4,5 +4,5 @@
 
 	<p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>
 
-	<app-project></app-project>
+	<app-projects></app-projects>
 </div>
