added tech-icons and names to details-card

--- a/src/app/portfolio/project-details-card/project-details-card.component.html
+++ b/src/app/portfolio/project-details-card/project-details-card.component.html
@@ -1,1 +1,33 @@
-<div class="project-details-container"></div>
+<div class="project-details-container">
+	<div id="project-details-card-left-side" class="project-details-card-side-wrapper">
+		<div class="details-card-id-and-title-container">
+			<p class="details-card-id">01</p>
+			<p class="details-card-title">Join</p>
+		</div>
+		<div class="details-card-description-container">
+			<p class="details-card-description-title">What is this project about?</p>
+			<p class="details-card-description">Task manager inspired by the Kanban System. Create and organize tasks
+				using drag and drop functions, assign users and categories.
+			</p>
+			<div class="details-card-tech-container">
+				<div class="details-tech-img-and-name-container">
+					<img src="assets/icons/overlay_icons/javascript_overlay.png" alt="JavaScript Icon">
+					<p>JavaScript</p>
+				</div>
+				<div class="details-tech-img-and-name-container">
+					<img src="assets/icons/overlay_icons/html_overlay.png" alt="HTML Icon">
+					<p>HTML</p>
+				</div>
+				<div class="details-tech-img-and-name-container">
+					<img src="assets/icons/overlay_icons/css_overlay.png" alt="CSS Icon">
+					<p>CSS</p>
+				</div>
+				<div class="details-tech-img-and-name-container">
+					<img src="assets/icons/overlay_icons/firebase_overlay.png" alt="Firebase Icon">
+					<p>Firebase</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="project-details-card-right-side" class="project-details-card-side-wrapper"></div>
+</div>
