--- a/src/app/portfolio/project-details-card/project-details-card.component.scss
+++ b/src/app/portfolio/project-details-card/project-details-card.component.scss
@@ -10,4 +10,103 @@
   border-radius: 30px;
   border: 1px solid rgba(61, 207, 182, 1);
   background: linear-gradient(55.22deg, #1c1c1c 36.26%, #08463b 93.28%);
+  padding: 62px;
+}
+
+#project-details-card-left-side {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 480px;
+  gap: 40px;
+}
+
+.details-card-id-and-title-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+.details-card-id {
+  width: 125px;
+  height: 100px;
+  font-family: "Karla";
+  font-weight: 700;
+  font-size: 128px;
+  line-height: 100%;
+  letter-spacing: -2%;
+  color: var(--active-font-color);
+}
+
+.details-card-title {
+  width: 148px;
+  height: 51px;
+  font-family: "Fira Code";
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 80%;
+  letter-spacing: -3%;
+  color: rgba(255, 255, 255, 1);
+}
+
+.details-card-description-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.details-card-description-title {
+  width: 100%;
+  height: 29px;
+  font-family: "Fira Code";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 120%;
+  letter-spacing: 0%;
+  color: var(--active-font-color);
+}
+
+.details-card-description {
+  width: 100%;
+  height: 66px;
+  font-family: "Karla";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: 0%;
+  color: rgba(255, 255, 255, 1);
+}
+
+.details-card-tech-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 480px;
+  height: 24px;
+  gap: 16px;
+}
+
+.details-tech-img-and-name-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4px;
+  img {
+    width: 24px;
+    height: 24px;
+  }
+  p {
+    height: 19px;
+    font-family: "Karla";
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    letter-spacing: 0%;
+    color: rgba(255, 255, 255, 1);
+  }
 }
