added buttons with links to details-card

--- a/src/app/portfolio/project-details-card/project-details-card.component.html
+++ b/src/app/portfolio/project-details-card/project-details-card.component.html
@@ -27,6 +27,20 @@
 					<p>Firebase</p>
 				</div>
 			</div>
+			<div class="details-link-buttons-container">
+				<a href="https://github.com/DennisJakobi76/Join" target="_blank" class="details-button">
+					<div class="details-button-text-and-arrow-container"><span>GitHub</span>
+						<div class="details-link-arrow-container"><img src="assets/icons/details_btn_arrow.png"
+								alt="Arrow Icon"></div>
+					</div>
+				</a>
+				<a href="*" target="_blank" class="details-button">
+					<div class="details-button-text-and-arrow-container"><span>Live Test</span>
+						<div class="details-link-arrow-container"><img src="assets/icons/details_btn_arrow.png"
+								alt="Arrow Icon"></div>
+					</div>
+				</a>
+			</div>
 		</div>
 	</div>
 	<div id="project-details-card-right-side" class="project-details-card-side-wrapper"></div>
